# binance-pay-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
data/: key_pair.json
examples/: close_order.rs  create_order.rs  notification_axum_server.rs
src/: api.rs  client.rs  errors.rs  lib.rs  utils.rs
src/c2b/: balance_query.rs  batch_payout.rs  close_order.rs  create_order.rs  mod.rs  query_order.rs  query_payout.rs  query_transfer.rs  refund_order.rs  transfer_fund.rs
src/c2b/order/: close.rs  create.rs  mod.rs  query.rs
src/c2b/payout/: initiate.rs  mod.rs  query.rs
src/c2b/refund/: create.rs  mod.rs  query.rs
src/c2b/sub_merchant/: create.rs
src/c2b/transfer/: initiate.rs  query.rs
src/c2b/wallet_balance/: query.rs
src/c2b/webhook/: mod.rs  notification.rs  verification.rs
src/c2b/webhook/notification/: batch_payout.rs  order.rs  refund.rs
