[package]
name = "binance-pay-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "bpay"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
hex = "0.4.3"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["json"] }
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
tokio = { version = "1.18.0", features = ["time", "macros"] }
